# Dateisysteme-Projekt-Gruppe-4

./: README.md
src/: CMakeLists.txt
src/.qtc_clangd/: compile_commands.json
src/.qtc_clangd/.cache/clangd/index/: BlockState.h.69458FCD3B9376D1.idx  BlockWidget.cpp.C401328D8C67DA9D.idx  BlockWidget.h.4A91C2B9CF5C5D45.idx  BsCluster.cpp.7F103C5DFC906312.idx  BsCluster.h.70AE5BBE01D0CD46.idx  BsDtf.cpp.CBE87B55E373E7A3.idx  BsDtf.h.B2EAD6F60F53AB3F.idx  BsFat.cpp.120E59FFE2D7E445.idx  BsFat.h.E50F959A9E406A2F.idx  BsFatAdapter.cpp.F5A197379C312447.idx  BsFatAdapter.h.226A490BD61B941C.idx  BsFile.cpp.EEC3A20EEF849AB1.idx  BsFile.h.CD18CA5AD703D38A.idx  CMakeCCompilerId.c.CAB6D7CB1F4AFAEC.idx  CMakeCXXCompilerId.cpp.8A4ED7798905E19D.idx  CMakeCXXCompilerId.cpp.93289298BF1DDBF8.idx  FileAllocationTableRow.cpp.1300576221625366.idx  FileAllocationTableRow.h.9970C0648F8A15C8.idx  FileSystemInterface.cpp.6F750C7A4550D4CE.idx  FileSystemInterface.h.F5FD14C8FD2B253A.idx  INode.cpp.161FFEB368B674D2.idx  INode.h.0F112B3AC86C7C7F.idx  MBR.cpp.906532F14F8BB24B.idx  MBR.h.6A721DB6730B7293.idx  PathHelper.cpp.01701E464714F32A.idx  PathHelper.h.1944AF316477A28A.idx  QTTest.config.E4BE21A3134E2EAC.idx  TreeItem.cpp.D687B47D2BAC2761.idx  TreeItem.h.5B08525F5950C821.idx  TreeModel.cpp.879E2989F039A073.idx  TreeModel.h.C0E0F6A4326E2511.idx  addtreeitem.cpp.6DD58199F4142A61.idx  addtreeitem.h.EF784799162A25AD.idx  addtreeitemmodal.cpp.9D18EEFD1ABAB38C.idx  main.cpp.57A4F57EF28A0ADE.idx  main.cpp.9AA6467F1DE0E116.idx  mainwindow.cpp.1A4301B1DAE2E70C.idx  mainwindow.h.BF486759B5299291.idx  moc_predefs.h.5234357AA79B20A9.idx  mocs_compilation.cpp.DCB8421BFBDB9123.idx
src/FilesystemSimulation/: BlockWidget.cpp  BlockWidget.h  CMakeCache.txt  CMakeLists.txt  TreeItem.cpp  TreeItem.h  TreeModel.cpp  TreeModel.h  addfile.cpp  addfile.h  addfile.ui  addfolder.cpp  addfolder.h  addfolder.ui  copydialog.cpp  copydialog.h  copydialog.ui  deletedialog.cpp  deletedialog.h  deletedialog.ui  fragmentationoverview.cpp  fragmentationoverview.h  fragmentationoverview.ui  globalerrormessagehandler.cpp  globalerrormessagehandler.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  toast.cpp  toast.h
src/FilesystemSimulation/Backend/BSFatStructure/: BlockState.h  BsCluster.cpp  BsCluster.h  BsDtf.cpp  BsDtf.h  BsFat.cpp  BsFat.h  BsFile.cpp  BsFile.h  FatFileInformation.cpp  FatFileInformation.h  FatFolderInformation.cpp  FatFolderInformation.h  FileAllocationTableRow.cpp  FileAllocationTableRow.h
src/FilesystemSimulation/Backend/BSFatStructure/BsFatAdapter/: BsFatAdapter.cpp  BsFatAdapter.h
src/FilesystemSimulation/Backend/CDROMStructure/: cdromadapter.cpp  cdromadapter.h
src/FilesystemSimulation/Backend/INodeStructure/: INode.cpp  INode.h  INodeMetadata.cpp  INodeMetadata.h  INodeSystem.cpp  INodeSystem.h  INodeType.h
src/FilesystemSimulation/Backend/INodeStructure/Data/: DataBlock.cpp  DataBlock.h  DataHandler.cpp  DataHandler.h  DoubleIndirect.cpp  DoubleIndirect.h  IndirectBlock.cpp  IndirectBlock.h  SingleIndirect.cpp  SingleIndirect.h  TripleIndirect.cpp  TripleIndirect.h
src/FilesystemSimulation/Backend/INodeStructure/INodeInterfaces/: INodeAdapter.cpp  INodeAdapter.h  INodeFileInformation.cpp  INodeFileInformation.h  INodeFolderInformation.cpp  INodeFolderInformation.h
src/FilesystemSimulation/Backend/InterfaceForMBR/: FileInformationInterface.cpp  FileInformationInterface.h  FileSystemInterface.cpp  FileSystemInterface.h  FolderInformationInterface.cpp  FolderInformationInterface.h
src/FilesystemSimulation/Backend/MBR/: MBR.cpp  MBR.h
src/FilesystemSimulation/helpers/: DateTimeHelper.h  PathHelper.cpp  PathHelper.h  datetimehelper.cpp
